// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <MandatoryFieldsExplanation
    className="form-field"
  />
  <div
    className="form-field"
  >
    <label
      htmlFor="old_password"
    >
      my_profile.password.old
      <MandatoryFieldMarker />
    </label>
    <input
      autoComplete="off"
      id="old_password"
      name="old_password"
      required={true}
      type="password"
    />
  </div>
  <div
    className="form-field"
  >
    <label
      htmlFor="password"
    >
      my_profile.password.new
      <MandatoryFieldMarker />
    </label>
    <input
      autoComplete="off"
      id="password"
      name="password"
      required={true}
      type="password"
    />
  </div>
  <div
    className="form-field"
  >
    <label
      htmlFor="password_confirmation"
    >
      my_profile.password.confirm
      <MandatoryFieldMarker />
    </label>
    <input
      autoComplete="off"
      id="password_confirmation"
      name="password_confirmation"
      required={true}
      type="password"
    />
  </div>
  <div
    className="form-field"
  >
    <SubmitButton
      id="change-password"
    >
      update_verb
    </SubmitButton>
  </div>
</form>
`;

exports[`should not change password if new password is same as old 1`] = `
<Alert
  key="user.new_password_same_as_old"
  variant="error"
>
  user.new_password_same_as_old
</Alert>
`;

exports[`should not change password if old password is incorrect 1`] = `
<Alert
  key="user.old_password_incorrect"
  variant="error"
>
  user.old_password_incorrect
</Alert>
`;
